# AutoBleem

./: .gitignore  .travis.yml  CMakeLists-psc.txt  CMakeLists.txt  Makefile.Arm  Makefile.Linux  Makefile.Linux32  Makefile.W32  Makefile.test  PS1Ctoolchain.cmake  PSCtoolchain.cmake  PSCtoolchainServer.cmake  PSCtoolchainV7.cmake  PSCtoolchainV8.cmake  README.md  ToolchainServer.cmake  cmake_install.cmake  custom.db  database.c  database.d  database.h  default.lic  filesystem.c  filesystem.d  main.c  main.d  make_all.sh  make_arm.sh  make_english.txt.sh  make_packages.sh  make_sys.sh  sqlite3.d  test.c  test.db  util.h
build_arm/: CMakeCache.txt  Makefile  autobleem-gui  cbleemsync  cmake_install.cmake  config.ini  starter
build_arm/theme/default/: theme.ini
libs/autobleemui/autobleem/: autobleemui.h  config.cpp  config.h  debugtimer.cpp  debugtimer.h  direntry.cpp  direntry.h  enums.h  environment.cpp  environment.h  inifile.cpp  inifile.h  lang.cpp  lang.h  padmapper.cpp  padmapper.h  stringinline.h  util.cpp
libs/autobleemui/ecm/: ecmhelper.cpp  ecmhelper.h
libs/autobleemui/guigfx/: application.cpp  application.h  gfx.cpp  gfx.h  gfxtheme.cpp  gfxtheme.h  gui.h  gui_font.h  gui_font_wrapper.h  gui_screen.h  gui_sdl_wrapper.h
libs/nlohmann/: json.h
nbproject/: Makefile-Debug.mk  Makefile-PCS1.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-PCS1.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
new_payload/: Makefile.pack_psc  Makefile.pack_psc_eris  mod_description_psc.txt
new_payload/psc_eris/media/Autobleem/: start.sh
payload/: Autobleem 0.8.0 release notes.txt  Autobleem 0.8.1 release notes.txt  Autobleem 0.8.5 release notes.txt  Retroboot 0.10 for Autobleem - ReadMe.txt
payload/Apps/amiberry/: app.ini  readme.txt  run.sh
payload/Apps/amiberry/adf/: dir.txt
payload/Apps/amiberry/conf/: amiberry.conf  custom1.uea  custom2.uea  custom3.uea
payload/Apps/bleemsync_networking/: app.ini  readme.txt  run.sh
payload/Apps/doom/: app.ini  crispy-doom  crispy-doom.cfg  crispy-heretic  crispy-hexen  crispy-server  crispy-setup  crispy-strife  default.cfg  readme.txt  run.sh
payload/Apps/doom/music-packs/: README.txt
payload/Apps/openbor/: app.ini  readme.txt  run.sh
payload/Apps/openbor/OpenBOR/: OpenBOR-psc
payload/Apps/retroarch/: readme.txt  run.sh
payload/Autobleem/: start.sh
payload/Autobleem/rc/: autobleem.sh  autobleem_cfg  autobleem_cfg.sh  backup.sh  backup_internal.sh  boot.sh  cleanup.sh  killsony.sh  launch.sh  launch_rb.sh  launch_rom.rfa.sh  link.sh  mipmap.sh  overmount.sh  rb_monitor.sh  retroarch.sh  selection.sh  startsony.sh
payload/cbleemsync/: cbleemsync  cbleemsync.arm  run.sh
payload/lolhack/: boot.sh  boot_autobleem.sh  boot_cbleemsync.sh  link_autobleem.sh
payload/themes/aergb/: theme.ini
payload/themes/default/: theme.ini
src/code/: DebugTimer.cpp  DebugTimer.h  DirEntry.cpp  DirEntry.h  cfgprocessor.cpp  cfgprocessor.h  config.cpp  config.h  coverdb.cpp  coverdb.h  database.cpp  database.h  ecmhelper.cpp  ecmhelper.h  environment.cpp  environment.h  filesystem.c  filesystem.cpp  game.cpp  game.h  gui.cpp  gui.h  gui_about.cpp  gui_about.h  gui_confirm.cpp  gui_confirm.h  gui_editor.cpp  gui_editor.h  gui_keyboard.cpp  gui_keyboard.h  gui_launcher.cpp  gui_launcher.h  gui_manager.cpp  gui_manager.h  gui_memcards.cpp  gui_memcards.h  gui_options.cpp  gui_options.h  gui_screen.h  gui_selectmemcard.cpp  (+30 more)
src/code/engine/: GetGameDirHierarchy.cpp  GetGameDirHierarchy.h  cardedit.cpp  cardedit.h  cfgprocessor.cpp  cfgprocessor.h  config.cpp  config.h  coverdb.cpp  coverdb.h  database.cpp  database.h  database_tables.txt  ecmhelper.cpp  ecmhelper.h  game.cpp  game.h  inifile.cpp  inifile.h  isodir.cpp  isodir.h  memcard.cpp  memcard.h  metadata.cpp  metadata.h  padmapper.cpp  padmapper.h  scanner.cpp  scanner.h  serialscanner.cpp  serialscanner.h
src/code/gui/: gui.cpp  gui.h  gui_about.cpp  gui_about.h  gui_confirm.cpp  gui_confirm.h  gui_editor.cpp  gui_editor.h  gui_font.cpp  gui_font.h  gui_gameDirMenu.cpp  gui_gameDirMenu.h  gui_keyboard.cpp  gui_keyboard.h  gui_manager.cpp  gui_manager.h  gui_memcards.cpp  gui_memcards.h  gui_menu.cpp  gui_menu.h  gui_menuBase.cpp  gui_menuBase.h  gui_options.cpp  gui_options.h  gui_optionsMenu.cpp  gui_optionsMenu.h  gui_optionsMenuBase.cpp  gui_optionsMenuBase.h  gui_padTest.cpp  gui_padTest.h  gui_padconfig.cpp  gui_padconfig.h  gui_playlists.cpp  gui_playlists.h  gui_renderText.cpp  gui_renderText.h  gui_screen.cpp  gui_screen.h  gui_scrollWin.cpp  gui_scrollWin.h  (+11 more)
src/code/gui/menus/: gui_editor.cpp  gui_gameDirMenu.h  gui_gameEditorMenu.cpp  gui_manager.cpp  (+18 more)
src/code/launcher/: NotificationLine.cpp  NotificationLine.h  emu_interceptor.cpp  emu_interceptor.h  gui_NotificationLine.cpp  gui_NotificationLine.h  gui_app_start.cpp  gui_app_start.h  gui_btn_guide.cpp  gui_btn_guide.h  gui_launcher.cpp  gui_launcher.h  gui_launcher_loop.cpp  gui_mc_manager.cpp  gui_mc_manager.h  launch_interceptor.cpp  launch_interceptor.h  pcsx_interceptor.cpp  pcsx_interceptor.h  ps_carousel.cpp  ps_carousel.h  ps_centerlabel.cpp  ps_centerlabel.h  ps_game.cpp  ps_game.h  ps_menu.cpp  ps_menu.h  ps_meta.cpp  ps_meta.h  ps_move_bnt.cpp  ps_move_bnt.h  ps_obj.cpp  ps_obj.h  ps_settings_back.cpp  ps_settings_back.h  ps_stateselector.cpp  ps_stateselector.h  ps_static.cpp  ps_static.h  ps_zoom_btn.cpp  (+5 more)
src/code/nlohmann/: fifo_map.h
src/include/: database.h  filesystem.h  game.h  metadata.h  scanner.h  util.h
src/include/SDL2/: SDL_config.h
src/resources/: card1.mcd  config.ini  coreOverride.cfg  internal.db  run.sh
src/resources/gpmapping/: DS3Wired.ini  PSCController.ini
src/resources/lang/: Chinese.txt  Czech.txt  Danish.txt  Deutsch.txt  Dutch.txt  English.txt  Finnish.txt  French.txt  Italian.txt  Italiano.txt  Occitan.txt  Polski.txt  Portuguese_BR.txt  Romanian.txt  Slovak.txt  Spanish.txt  Swedish.txt  Turkish.txt
src/resources/sony/: colors.ini
(+101 files in other folders)
